--- a/src/hades_extensions/tests/CMakeLists.txt
+++ b/src/hades_extensions/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Fetch the GoogleTest repository and initialise it
-find_package(GTest CONFIG REQUIRED)
+find_package(GTest REQUIRED)
 
 # Create an executable from our test code and link it against GTest and the C++ library
 include(CTest)
