--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,6 +53,8 @@ jobs:
           submodules: recursive
       - name: Set up MSVC
         uses: ilammy/msvc-dev-cmd@v1.12.1
+      - name: Set up CMake
+        uses: lukka/get-cmake@v3.27.7
       - name: Set up vcpkg
         uses: lukka/run-vcpkg@v11.3
         with:
