--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -59,24 +59,15 @@ jobs:
         uses: lukka/run-vcpkg@v11.3
         with:
           vcpkgDirectory: ${{ github.workspace }}/src/hades_extensions/vcpkg
-      - name: Build CMake and run tests
+      - name: Configure and build CMake
         working-directory: ${{ github.workspace }}/src/hades_extensions
-        shell: bash
         run: |
-          BUILD_TYPE="Release"
-          BUILD_DIR="build-release"
-          if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
-            BUILD_DIR="build-coverage"
-            BUILD_TYPE="Coverage"
-          fi
-          
-          cmake --preset $BUILD_TYPE
-          cmake --build $BUILD_DIR
-          ctest --output-on-failure --no-tests=error --test-dir ${{ github.workspace }}/src/hades_extensions/$BUILD_DIR/tests
+          cmake -DDO_PYTHON=OFF --preset Coverage
+          cmake --build build-coverage
       - name: Run CTest and generate the coverage report
-        if: matrix.os == 'ubuntu-latest'
         run: |
           pip install gcovr
+          ctest --output-on-failure --no-tests=error --test-dir ${{ github.workspace }}/src/hades_extensions/build-coverage/tests
           gcovr -r ${{ github.workspace }} --exclude src/hades_extensions/build-coverage --exclude src/hades_extensions/tests --exclude src/hades_extensions/src/binding.cpp --coveralls coverage.json
       - name: Upload coverage report
         uses: coverallsapp/github-action@v2.2.3
