--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
+        with:
+          submodules: recursive
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
       - name: Set up vcpkg
@@ -29,6 +31,8 @@ jobs:
 #    steps:
 #      - name: Checkout repository
 #        uses: actions/checkout@v4.1.1
+#        with:
+#          submodules: recursive
 #      - name: Set up CMake
 #        uses: lukka/get-cmake@v3.27.7
 #      - name: Run cppcheck
@@ -41,6 +45,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
+        with:
+          submodules: recursive
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
       - name: Set up vcpkg
