--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,18 +16,18 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
+        with:
+          submodules: recursive
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4.7.1
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Set up MSVC
-        uses: ilammy/msvc-dev-cmd@v1.12.1
+      - name: Set up CMake
+        uses: lukka/get-cmake@v3.27.7
       - name: Set up vcpkg
         uses: lukka/run-vcpkg@v11.3
         with:
           vcpkgDirectory: ${{ github.workspace }}/src/hades_extensions/vcpkg
-      - name: Set up CMake
-        uses: lukka/get-cmake@v3.27.7
       - name: Install EGL on Linux for headless Arcade
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt-get update && sudo apt-get install libegl1
@@ -51,8 +51,6 @@ jobs:
         uses: actions/checkout@v4.1.1
         with:
           submodules: recursive
-      - name: Set up MSVC
-        uses: ilammy/msvc-dev-cmd@v1.12.1
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
       - name: Set up vcpkg
