--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -57,4 +57,4 @@ jobs:
         uses: jidicula/clang-format-action@v4.11.0
         with:
           check-path: ${{ github.workspace }}/src/hades_extensions
-          exclude-regex: build-debug
+          exclude-regex: (build-debug|vcpkg)
