--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,7 +23,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Set up MSVC
-        uses: lukka/setup-msvc@v1.12.1
+        uses: ilammy/msvc-dev-cmd@v1.12.1
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
       - name: Set up vcpkg
@@ -54,7 +54,7 @@ jobs:
         with:
           submodules: recursive
       - name: Set up MSVC
-        uses: lukka/setup-msvc@v1.12.1
+        uses: ilammy/msvc-dev-cmd@v1.12.1
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
       - name: Set up vcpkg
