--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,7 +35,9 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
       - name: Install Python dependencies
-        run: poetry install --no-interaction
+        run: |
+          pip install wheel
+          poetry install --no-interaction
       - name: Build the game
         run: |
           python -m build --cpp
