--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,7 @@ jobs:
           virtualenvs-in-project: true
       - name: Install Python dependencies
         run: |
-          pip install wheel
+          pip install wheel setuptools poetry-core
           poetry install --no-interaction
       - name: Build the game
         run: |
