--- a/src/hades_extensions/src/CMakeLists.txt
+++ b/src/hades_extensions/src/CMakeLists.txt
@@ -1,6 +1,16 @@
 # Fetch the pybind11 repository and initialise it
 find_package(Python COMPONENTS Interpreter Development REQUIRED)
-find_package(pybind11 CONFIG REQUIRED)
+FetchContent_Declare(
+        pybind11_source
+        GIT_REPOSITORY https://github.com/pybind/pybind11.git
+        GIT_TAG v2.11.1
+)
+FetchContent_GetProperties(pybind11_source)
+FetchContent_Populate(pybind11_source)
+add_subdirectory(
+        ${pybind11_source_SOURCE_DIR}
+        ${pybind11_source_BINARY_DIR}
+)
 
 # Create the C++ library which will be used for the tests and the Python module
 add_library(${CPP_LIB} STATIC
@@ -23,4 +33,6 @@ target_include_directories(${CPP_LIB} PUBLIC ${CMAKE_SOURCE_DIR}/include)
 if (DO_PYTHON)
     pybind11_add_module(${PY_MODULE} ${CMAKE_SOURCE_DIR}/src/binding.cpp)
     target_link_libraries(${PY_MODULE} PRIVATE ${CPP_LIB})
+else ()
+    message(STATUS "Python bindings disabled (DO_PYTHON is not set)")
 endif ()
