--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -12,14 +12,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
-        with:
-          submodules: recursive
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
-      - name: Set up vcpkg
-        uses: lukka/run-vcpkg@v11.3
-        with:
-          vcpkgDirectory: ${{ github.workspace }}/src/hades_extensions/vcpkg
       - name: Configure CMake
         working-directory: ${{ github.workspace }}/src/hades_extensions
         run: cmake --preset Debug
@@ -31,10 +25,6 @@ jobs:
 #    steps:
 #      - name: Checkout repository
 #        uses: actions/checkout@v4.1.1
-#        with:
-#          submodules: recursive
-#      - name: Set up CMake
-#        uses: lukka/get-cmake@v3.27.7
 #      - name: Run cppcheck
 #        working-directory: ${{ github.workspace }}/src/hades_extensions
 #        run: |
@@ -45,16 +35,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
-        with:
-          submodules: recursive
-      - name: Set up CMake
-        uses: lukka/get-cmake@v3.27.7
-      - name: Set up vcpkg
-        uses: lukka/run-vcpkg@v11.3
-        with:
-          vcpkgDirectory: ${{ github.workspace }}/src/hades_extensions/vcpkg
       - name: Run clang-format
         uses: jidicula/clang-format-action@v4.11.0
         with:
           check-path: ${{ github.workspace }}/src/hades_extensions
-          exclude-regex: (build-debug|vcpkg)
+          exclude-regex: build-debug
