--- a/src/hades_extensions/CMakeLists.txt
+++ b/src/hades_extensions/CMakeLists.txt
@@ -5,8 +5,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-set(CMAKE_TOOLCHAIN_FILE vcpkg/scripts/buildsystems/vcpkg.cmake CACHE STRING "Vcpkg toolchain file")
-set(ENABLE_COVERAGE OFF CACHE BOOL "Enable coverage reporting for GCC/Clang")
+set(ENABLE_COVERAGE ON CACHE BOOL "Enable coverage reporting for GCC/Clang")
 set(DO_PYTHON ON CACHE BOOL "Enable Python bindings")
 set(DO_TESTS ON CACHE BOOL "Enable testing")
 
@@ -16,6 +15,13 @@ set(CPP_LIB hades_extensions_lib)
 set(TEST_MODULE hades_extensions_tests)
 project(${PY_MODULE} LANGUAGES CXX)
 
+# Set the warning level
+if (MSVC)
+    add_compile_options(/W4 /WX)
+else ()
+    add_compile_options(-Wall -Wextra -Werror -pedantic)
+endif ()
+
 # Check if the tests have been disabled
 if (NOT DO_TESTS)
     message(STATUS "Tests disabled (DO_TESTS is not set)")
@@ -23,7 +29,7 @@ endif ()
 
 # Enable coverage if supported by the compiler and enabled by the user
 if (ENABLE_COVERAGE)
-    if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    if (NOT MSVC)
         message(STATUS "Coverage enabled (compiler is GCC/Clang)")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 --coverage")
         set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage")
@@ -40,6 +46,3 @@ add_subdirectory(src)
 if (DO_TESTS)
     add_subdirectory(tests)
 endif ()
-
-# TODO: maybe add vcpkg to the c++ project
-# TODO: maybe switch to catch2
