--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -32,12 +32,10 @@ jobs:
       - name: Set up CMake
         if: matrix.language == 'cpp'
         uses: lukka/get-cmake@v3.27.7
-      - name: Install Poetry
-        if: matrix.language == 'python'
-        uses: snok/install-poetry@v1.3.4
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
+      - name: Configure CMake
+        if: matrix.language == 'cpp'
+        working-directory: ${{ github.workspace }}/src/hades_extensions
+        run: cmake --preset Debug
       - name: Perform CodeQL analysis
         uses: github/codeql-action/analyze@v2.22.8
         with:
