--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -23,13 +23,16 @@ jobs:
         uses: github/codeql-action/init@v2.22.8
         with:
           languages: ${{ matrix.language }}
+          setup-python-dependencies: false
       - name: Set up CMake
         if: matrix.language == 'cpp'
         uses: lukka/get-cmake@v3.27.7
       - name: Configure CMake
         if: matrix.language == 'cpp'
         working-directory: ${{ github.workspace }}/src/hades_extensions
-        run: cmake --preset Debug
+        run: |
+          cmake --preset Debug
+          cmake --build build-debug
       - name: Perform CodeQL analysis
         uses: github/codeql-action/analyze@v2.22.8
         with:
