--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -27,13 +27,10 @@ jobs:
       - name: Set up CMake
         if: matrix.language == 'cpp'
         uses: lukka/get-cmake@v3.27.7
-      - name: Configure CMake
+      - name: Autobuild C++
         if: matrix.language == 'cpp'
-        working-directory: ${{ github.workspace }}/src/hades_extensions
-        run: |
-          cmake --preset Debug
-          cmake --build build-debug
+        uses: github/codeql-action/autobuild@v2.22.9
       - name: Perform CodeQL analysis
-        uses: github/codeql-action/analyze@v2.22.8
+        uses: github/codeql-action/analyze@v2.22.9
         with:
           category: /language:${{ matrix.language }}
