--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -40,3 +40,5 @@ jobs:
         with:
           check-path: ${{ github.workspace }}/src/hades_extensions
           exclude-regex: build-debug
+
+# TODO: Maybe change these so it pushes the changes for clang-tidy and clang-format to GitHub
