--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -16,7 +16,9 @@ jobs:
         uses: lukka/get-cmake@v3.27.7
       - name: Configure CMake
         working-directory: ${{ github.workspace }}/src/hades_extensions
-        run: cmake --preset Debug
+        run: |
+          cmake --preset Debug
+          gcc --version
       - name: Run clang-tidy
         working-directory: ${{ github.workspace }}/src/hades_extensions
         run: clang-tidy -p ./build-debug/compile_commands.json --extra-arg=-std=c++20 --quiet ./**/*.cpp ./**/*.hpp
