--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -19,6 +19,7 @@ jobs:
         run: |
           cmake --preset Debug
           gcc --version
+          clang --version
       - name: Run clang-tidy
         working-directory: ${{ github.workspace }}/src/hades_extensions
         run: clang-tidy -p ./build-debug/compile_commands.json --extra-arg=-std=c++20 --quiet ./**/*.cpp ./**/*.hpp
