--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -26,9 +26,8 @@ jobs:
           setup-python-dependencies: false
       - name: Autobuild C++
         if: matrix.language == 'cpp'
-        uses: github/codeql-action/autobuild@v2.22.9
-        with:
-          working-directory: ${{ github.workspace }}/src/hades_extensions
+        working-directory: ${{ github.workspace }}/src/hades_extensions
+        run: cmake . --preset Debug && cmake --build build-debug
       - name: Perform CodeQL analysis
         uses: github/codeql-action/analyze@v2.22.9
         with:
