--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,7 +26,7 @@ jobs:
         uses: lukka/get-cmake@v3.27.7
       - name: Install EGL on Linux for headless Arcade
         if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get update && sudo apt-get install libegl1
+        run: sudo apt-get update && sudo apt-get install libglfw3-dev
       - name: Run Tox
         run: |
           pip install tox tox-gh-actions
