--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -24,7 +24,10 @@ jobs:
         with:
           languages: ${{ matrix.language }}
           setup-python-dependencies: false
-      - name: Autobuild C++
+      - name: Set up CMake
+        if: matrix.language == 'cpp'
+        uses: lukka/get-cmake@v3.27.7
+      - name: Build CMake
         if: matrix.language == 'cpp'
         working-directory: ${{ github.workspace }}/src/hades_extensions
         run: cmake . --preset Debug && cmake --build build-debug
