--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,9 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest]
-        # TODO: Figure out why EGL isn't working on ubuntu
-        # os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest]
         python-version: ["3.11", "3.12"]
     steps:
       - name: Checkout repository
@@ -28,7 +26,7 @@ jobs:
         uses: lukka/get-cmake@v3.27.7
       - name: Install EGL on Linux for headless Arcade
         if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get update && sudo apt-get install libegl1
+        run: sudo apt-get update && sudo apt-get install libegl1 libgl1-mesa-glx
       - name: Run Tox
         run: |
           pip install tox tox-gh-actions
